# token-economics

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: pricing.yaml
docs/assets/: architecture.html
src/tokeneconomics/: __init__.py  cache.py  calculator.py  cli.py  config.py  latency.py  pricing.py  report.py  routing.py  workload.py
tests/: test_cache.py  test_calculator.py  test_pricing_schema.py  test_routing.py
